--- a/jelly.cabal
+++ b/jelly.cabal
@@ -13,4 +13,7 @@ executable jelly
     base
     , sdl2 >= 1.3.0 && < 1.4
     , sdl2-image
-    , basic-prelude
+    , containers
+    , directory
+    , filepath
+    , property-list
