--- a/jelly.cabal
+++ b/jelly.cabal
@@ -7,6 +7,8 @@ executable jelly
   hs-source-dirs: src
   main-is: Main.hs
   other-modules:
+    Audio
+    Jammit
   default-language: Haskell2010
   ghc-options: -Wall -threaded
   build-depends:
