--- a/jelly.cabal
+++ b/jelly.cabal
@@ -12,7 +12,7 @@ executable jelly
   default-language: Haskell2010
   ghc-options: -Wall -threaded
   build-depends:
-    base
+    base >= 4.7 && < 4.8
     , sdl2 >= 1.3.0 && < 1.4
     , sdl2-image
     , containers
