--- a/jelly.cabal
+++ b/jelly.cabal
@@ -31,6 +31,7 @@ extra-source-files:
   img/piano.png
   img/synth.png
   img/vocal.png
+  img/divider.png
 
 executable jelly
   hs-source-dirs: src
