conduit handles opening/closing sndfile handles
Thought this would fix the freezes / sudden skips
but they're still there; must be either in openal part,
or in the thread-killing behavior

--- a/jelly.cabal
+++ b/jelly.cabal
@@ -33,6 +33,7 @@ executable jelly
     , rubberband
     , conduit
     , transformers
+    , resourcet
   if flag(MacApp)
     cpp-options: -DMACAPP
     build-depends: FindBin
