--- a/jelly.cabal
+++ b/jelly.cabal
@@ -13,9 +13,9 @@ executable jelly
   hs-source-dirs: src
   main-is: Main.hs
   other-modules:
-    Audio
     Jammit
     Paths_jelly
+    AudioPipe
   default-language: Haskell2010
   ghc-options: -Wall -threaded
   build-depends:
