--- a/jelly.cabal
+++ b/jelly.cabal
@@ -19,11 +19,12 @@ executable jelly
   hs-source-dirs: src
   main-is: Main.hs
   other-modules:
-    Jammit
     Paths_jelly
-    AudioPipe
-    Util
-    Arrangement
+    Jelly.Jammit
+    Jelly.AudioPipe
+    Jelly.SDL
+    Jelly.Arrangement
+    Jelly.Prelude
   default-language: Haskell2010
   ghc-options: -Wall -threaded
   build-depends:
