moved app state to lens + StateT

--- a/jelly.cabal
+++ b/jelly.cabal
@@ -43,6 +43,7 @@ executable jelly
     , conduit
     , transformers
     , resourcet
+    , lens
   if flag(LocalResources)
     build-depends: FindBin
     cpp-options: -DLOCALRESOURCES
