--- a/jelly.cabal
+++ b/jelly.cabal
@@ -2,7 +2,7 @@ name: jelly
 version: 0.1
 build-type: Simple
 cabal-version: >= 1.10
-data-files:
+extra-source-files:
   resources/*.png
 license: GPL-3
 license-file: LICENSE
@@ -10,10 +10,6 @@ category: Music
 maintainer: miketolly@gmail.com
 synopsis: Free viewer for Jammit sheet music and audio content
 homepage: https://github.com/mtolly/jelly
-
-flag LocalResources
-  description: Looks for the "resources/" folder in the same dir as the executable
-  default: False
 
 executable jelly
   hs-source-dirs: src
@@ -29,22 +25,20 @@ executable jelly
   default-language: Haskell2010
   ghc-options: -Wall -threaded
   build-depends:
-    base >= 4.7 && < 4.8
+    base >= 4.8 && < 5
     , sdl2 >= 1.3.0 && < 1.4
     , sdl2-image
     , containers
     , directory
     , filepath
-    , property-list
     , OpenAL
     , hsndfile
     , hsndfile-vector
     , vector
-    , rubberband
+    , rubberband >= 0.1.0.2
     , conduit
     , transformers
     , resourcet
     , lens
-  if flag(LocalResources)
-    build-depends: FindBin
-    cpp-options: -DLOCALRESOURCES
+    , jammittools >= 0.5.0.1
+    , FindBin
